# torch-examples

./: README.md
torch-article/: adversarial_auto_encoder.lua  auto_encoder.lua  auto_encoder_fine_tune.lua  auto_encoder_fine_tuning.lua  auto_encoder_fixed_bias.lua  auto_encoder_gpu.lua  auto_encoder_optim.lua  auto_encoder_optim_gpu.lua  auto_encoder_pre_training.lua  auto_encoder_residual.lua  auto_encoder_trainer.lua  auto_encoder_updateParameters.lua  auto_encoder_weights.lua  classification_trainer.lua  conv_auto_encoder.lua  conv_auto_encoder_optim.lua  conv_hdf5_auto_encoder.lua  conv_vae.lua  custom_abs_conv_auto_encoder.lua  custom_abs_criterion.lua  custom_data_structure.lua  fine_tuning.lua  generative_adversarial_network.lua  init.lua  load_save_auto_encoder.lua  load_save_json.lua  pca.lua  utils.lua  weight_initialization.lua  weight_initialization_manual.lua
torch-c-article/: README.md  test.lua
torch-c-article/lib/cpp/cpu/: CMakeLists.txt  test_identity_module.cpp  test_identity_module.h  test_module.cpp  test_module.h
torch-c-article/lib/cpp/gpu/: CMakeLists.txt  test_identity_module.cu  test_identity_module.h
torch-c-article/lib/th/: TestIdentityModule.lua  TestModule.lua  ffi.lua  init.lua
vae-articles/: README.md  bernoulli_vae.lua  conv_vae.lua  denoising_vae.lua  vae.lua
